@@ -2,7 +2,7 @@
  * Process Hacker -
  *   module provider
  *
- * Copyright (C) 2009-2015 wj32
+ * Copyright (C) 2009-2016 wj32
  *
  * This file is part of Process Hacker.
  *
@@ -375,7 +375,8 @@ VOID PhModuleProviderUpdate(
             {
                 PPH_MODULE_INFO module = modules->Items[i];
 
-                if ((*moduleItem)->BaseAddress == module->BaseAddress && PhEqualString((*moduleItem)->FileName, module->FileName, TRUE))
+                if ((*moduleItem)->BaseAddress == module->BaseAddress &&
+                    PhEqualString((*moduleItem)->FileName, module->FileName, TRUE))
                 {
                     found = TRUE;
                     break;
@@ -442,6 +443,8 @@ VOID PhModuleProviderUpdate(
 
         if (!moduleItem)
         {
+            FILE_NETWORK_OPEN_INFORMATION networkOpenInfo;
+
             moduleItem = PhCreateModuleItem();
 
             moduleItem->BaseAddress = module->BaseAddress;
@@ -458,10 +461,7 @@ VOID PhModuleProviderUpdate(
             moduleItem->FileName = module->FileName;
             PhReferenceObject(moduleItem->FileName);
 
-            PhInitializeImageVersionInfo(
-                &moduleItem->VersionInfo,
-                PhGetString(moduleItem->FileName)
-                );
+            PhInitializeImageVersionInfo(&moduleItem->VersionInfo, moduleItem->FileName->Buffer);
 
             moduleItem->IsFirst = i == 0;
 
@@ -511,6 +511,16 @@ VOID PhModuleProviderUpdate(
 
                     PhUnloadRemoteMappedImage(&remoteMappedImage);
                 }
+            }
+
+            if (NT_SUCCESS(PhQueryFullAttributesFileWin32(moduleItem->FileName->Buffer, &networkOpenInfo)))
+            {
+                moduleItem->FileLastWriteTime = networkOpenInfo.LastWriteTime;
+                moduleItem->FileEndOfFile = networkOpenInfo.EndOfFile;
+            }
+            else
+            {
+                moduleItem->FileEndOfFile.QuadPart = -1;
             }
 
             if (moduleItem->Type == PH_MODULE_TYPE_MODULE || moduleItem->Type == PH_MODULE_TYPE_KERNEL_MODULE ||
